mp3Frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp3converter-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
          - path: /download
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
          - path: /validate_token
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8081
